--- a/fd/package.json
+++ b/fd/package.json
@@ -24,14 +24,17 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-strap": "^0.0.1",
     "react-timezone-select": "^3.2.3",
     "react-toastify": "^10.0.4",
     "reactstrap": "^9.2.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
