--- a/fd/package.json
+++ b/fd/package.json
@@ -18,12 +18,16 @@
     "antd": "^5.15.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.0.0-beta.0",
